# WEBGOIT

HMW4/: Dockerfile  README.md  docker-compose.yml  main.py  messages.json  pyproject.toml
HMW4/static/: style.css
HMW4/templates/: error.html  index.html  message.html
HMW4/templates/storage/: data_memory.json
HMW5/: api_client.py  currency_rates.py  exchange_rates.txt  main.py  pyproject.toml  requirements.txt
HMW6/: create_database.py  database.db  main.py  pyproject.toml  readme.md  requirements.txt
HMW6/queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_additional_1.sql  query_additional_2.sql
