[tool.poetry]
name = "hmw5"
version = "0.1.0"
description = ""
authors = ["Amontears <amontearx66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.10.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
