[tool.poetry]
name = "hmw6"
version = "0.1.0"
description = ""
authors = ["Amontears <amontearx66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.3"
sqlalchemy = "^2.0.36"
peewee = "^3.17.7"
faker = "^30.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
